# tg_bot

./: .example.env  config.py  docker-compose.yaml  main.py  pyproject.toml
bot/: Dockerfile  config.py  exceptions.py  main.py  middleware.py  pyproject.toml
