[tool.poetry]
name = "tg-bot"
version = "0.1.0"
description = ""
authors = ["Semen Sorokatyi <ssorokatiy@nedra.digital>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytelegrambotapi = "^4.22.1"
pydantic-settings = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
